objects/cscfga__Attribute__c.object
<CustomObject>
    <fields>
        <fullName>cscfga__Annualised_Price__c</fullName>
        <formula>IF (cscfga__Recurring__c ,  cscfga__Product_Configuration__r.cscfga__Recurrence_Frequency__c  *  cscfga__Price__c,
  IF (ISBLANK(cscfga__Price__c), null, cscfga__Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The price of this Attribute for a single year. Only relevant where the Attribute is set to be a line item. Auto-calculated based on the recurrence frequency of the Product Configuration this Attribute belongs to.</inlineHelpText>
        <label>Annualised Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Attribute Definition which describes this Attribute.</inlineHelpText>
        <label>Attribute Definition</label>
        <referenceTo>cscfga__Attribute_Definition__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Billing_Price__c</fullName>
        <formula>IF (cscfga__Recurring__c , 
  IF(ISBLANK(cscfga__Product_Configuration__r.cscfga__Billing_Frequency__c ) ||  cscfga__Product_Configuration__r.cscfga__Billing_Frequency__c  == 0,  cscfga__Price__c ,    
    (cscfga__Product_Configuration__r.cscfga__Recurrence_Frequency__c / cscfga__Product_Configuration__r.cscfga__Billing_Frequency__c)  *  cscfga__Price__c) ,
IF (ISBLANK(cscfga__Price__c), null, cscfga__Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing price of this Attribute. Only relevant where the Attribute is set to be a line item. Auto-calculated based on the recurrence frequency of the Product Configuration this Attribute belongs to.</inlineHelpText>
        <label>Billing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Cascade_value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Cascade value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Discount_Amount__c</fullName>
        <description>If &quot;Discount Type&quot; field is set to value &quot;amount&quot; this field contains currency amount that will be deducted from the list price.
If &quot;Discount Type&quot; field is set to value &quot;percentage&quot; this field contains percentage that will be deducted from the list price.</description>
        <formula>IF ((ISBLANK(cscfga__Discount_Type__c)), null,
  IF ((ISBLANK(cscfga__Price__c) &amp;&amp; ISBLANK(cscfga__List_Price__c)), null,
    IF ((ISBLANK(cscfga__Price__c) || ISBLANK(cscfga__List_Price__c)), 0,
      IF ((cscfga__Price__c == 0) &amp;&amp; (cscfga__List_Price__c == 0), 0,
        IF ((cscfga__Discount_Type__c == &quot;percentage&quot; &amp;&amp; cscfga__Price__c &gt; 0 &amp;&amp; cscfga__List_Price__c == 0), null,
          IF ((cscfga__Discount_Type__c == &quot;amount&quot;), cscfga__List_Price__c - cscfga__Price__c, 
            (1 - cscfga__Price__c / cscfga__List_Price__c) * 100
          )
        )
      )
    )
  )
)</formula>
        <inlineHelpText>The amount of discount applied to this Attribute&apos;s price. A calculated field representing the difference between this Attribute&apos;s List Price and Sales Price, depending on the Discount Type - either an absolute amount or a percentage.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Discount_Type__c</fullName>
        <defaultValue>&quot;amount&quot;</defaultValue>
        <description>Discount type that will be applied to sales price. Could be absolute (amount) or relative value (percentage).</description>
        <inlineHelpText>The type of discount - e.g. &apos;amount&apos; or &apos;percentage&apos;.</inlineHelpText>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Display_Value__c</fullName>
        <inlineHelpText>The value of this Attribute displayed to the user during configuration. Only relevant to Select List or Radio Button type Attributes.</inlineHelpText>
        <label>Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this attribute is not displayed on the product configuration screen.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this attribute is a line item and will be displayed in the product bundle screen.</inlineHelpText>
        <label>Is Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial value is inherited from the attribute definition, but it may be changed by rules. This field reflects the state of readonlyness at the time the attribute was saved into database, so it could be used without executing all rules on the configuration.</description>
        <inlineHelpText>If checked, this Attribute is currently read-only given the state of the Product Configuration process.</inlineHelpText>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial value is inherited from the attribute definition, but it may be changed by rules. This field reflects the state of requiredness at the time the attribute was saved into database, so it could be used without executing all rules on the configuration.</description>
        <inlineHelpText>If checked, this Attribute is currently required given the state of the Product Configuration.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_rate_line_item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that attribute is Rate/Usage line item. Copied from Attribute Definition.</description>
        <inlineHelpText>If checked this attribute is listed as standard line item on bundle page, but its price will not be totalled in any of the sums. If specified its price can be used later on in the billing process for calculation of actual charges given a period of usage.</inlineHelpText>
        <label>Is Rate Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>System field. An external ID uniquely identifying this Attribute.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cscfga__Line_Item_Description__c</fullName>
        <inlineHelpText>Is displayed on bundle detail page. Initial value is taken from Attribute Definition, but it may be changed by rules. If this field has no value, ‘EMPTY&apos; will be displayed. Operators +,-,/,*  and {}, () can be used by escaping them with a \.</inlineHelpText>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Line_Item_Sequence__c</fullName>
        <inlineHelpText>The weight to be assigned to this Attribute when sorting line items for display. Only relevant to line item Attributes.</inlineHelpText>
        <label>Line Item Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__List_Price__c</fullName>
        <description>List price contains the price before discount is applied.</description>
        <inlineHelpText>The price of this Attribute before any discount.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Price__c</fullName>
        <inlineHelpText>The sales price of this Attribute after any discount.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Configuration__c</fullName>
        <inlineHelpText>The Product Configuration to which this Attribute belongs.</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cscfga__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Attribute should be treated as a recurring line item. If unchecked, this Attribute should be treated as a one-off line item. Only relevant to line item Attributes.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Value__c</fullName>
        <inlineHelpText>The value of this Attribute captured during the configuration process.</inlineHelpText>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, this Attribute is active within the configuration. Otherwise it should be ignored.</inlineHelpText>
        <label>Is_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__is_product_level_discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Level Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Attribute_Definition__c</columns>
        <columns>cscfga__Value__c</columns>
        <columns>cscfga__Price__c</columns>
        <columns>cscfga__Product_Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>